<resources>
    <string name="app_name">Hacker News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="new_stories">New Stories</string>
    <string name="top_stories">Top Stories</string>
    <string name="best_stories">Best Stories</string>
    <string name="show_stories">Tools</string>
    <string name="questions">Ask</string>
    <string name="jobs">Jobs</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="hacker_news">Hacker News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
